TEST_PROGRAMS/VALID/jonathan_campbell/abs.min
# abs val

var x: int;
var tmp: int;
var s: string;

tmp = x - x;
s = "AZaz09 .!?,";

if tmp then
	# tmp not equal to 0, so x was negative
	tmp = -x;
	print tmp;
else
	# tmp == 0, so x was positive
	print x;
endif

print s;
