TEST_PROGRAMS/INVALID/Fan_Jin/multiple-assignment.min
var x: int;
var y: string;
var z: string;

x = 0;
y = z = "hello";

if x then
  print z;
else
  print "not " + z;
endif
